--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -45,18 +45,18 @@
                   Header="Produkter" Margin="5" BorderThickness="2">
             <Grid Margin="4">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="30*"></RowDefinition>
+                    <RowDefinition Height="35*"></RowDefinition>
                     <RowDefinition Height="334*"/>
                     <RowDefinition Height="55*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" MinHeight="20">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="51*"></ColumnDefinition>
-                        <ColumnDefinition Width="17*"/>
-                        <ColumnDefinition Width="55*"/>
-                        <ColumnDefinition Width="9*"/>
-                        <ColumnDefinition Width="12*"></ColumnDefinition>
-                        <ColumnDefinition Width="7*"></ColumnDefinition>
+                        <ColumnDefinition Width="105*"></ColumnDefinition>
+                        <ColumnDefinition Width="32*"/>
+                        <ColumnDefinition Width="117*"/>
+                        <ColumnDefinition Width="19*"/>
+                        <ColumnDefinition Width="25*"></ColumnDefinition>
+                        <ColumnDefinition Width="14*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Button x:Name="CategoryMenu"
                             Content="Categories"
@@ -77,17 +77,17 @@
                     </Button>
                     <Label Grid.Row="0" Grid.Column="2" 
                            HorizontalAlignment="Right"
-                           Content="Page"/>
+                           Content="Page" Width="36"/>
                     <TextBlock Grid.Row="0" Grid.Column="3"
                            Text="{Binding CurrentPages}"
                            VerticalAlignment="Center"
-                           HorizontalAlignment="Center"/>
+                           HorizontalAlignment="Center" Height="16" Margin="10,10,9,9" Width="0"/>
                     <Label Grid.Row="0" Grid.Column="4"
                            Content="of"
-                           HorizontalAlignment="Center"/>
+                           HorizontalAlignment="Center" Margin="2,0" Width="21"/>
                     <TextBlock Grid.Row="0" Grid.Column="5"
                                Text="{Binding TotalPages}"
-                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                               HorizontalAlignment="Center" VerticalAlignment="Center" Height="16" Margin="7,10,7,9" Width="0"/>
                 </Grid>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
