--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -77,17 +77,17 @@
                     </Button>
                     <Label Grid.Row="0" Grid.Column="2" 
                            HorizontalAlignment="Right"
-                           Content="Page" Width="36"/>
+                           Content="Page"/>
                     <TextBlock Grid.Row="0" Grid.Column="3"
                            Text="{Binding CurrentPages}"
                            VerticalAlignment="Center"
-                           HorizontalAlignment="Center" Height="16" Margin="10,10,9,9" Width="0"/>
+                           HorizontalAlignment="Center"/>
                     <Label Grid.Row="0" Grid.Column="4"
                            Content="of"
-                           HorizontalAlignment="Center" Margin="2,0" Width="21"/>
+                           HorizontalAlignment="Center"/>
                     <TextBlock Grid.Row="0" Grid.Column="5"
                                Text="{Binding TotalPages}"
-                               HorizontalAlignment="Center" VerticalAlignment="Center" Height="16" Margin="7,10,7,9" Width="0"/>
+                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
