--- a/Backend/Backend/Views/DeleteCategoryView.xaml
+++ b/Backend/Backend/Views/DeleteCategoryView.xaml
@@ -26,7 +26,7 @@
             </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
                 <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-                <Button Content="_Slet" FontSize="10pt" Height="30" Margin="0, 10" Command="{Binding DeleteCommand}"/>
+                <Button Content="_Slet" IsDefault="True" FontSize="10pt" Height="30" Margin="0, 10" Command="{Binding DeleteCommand}"/>
                 <Button Content="_Flyt" FontSize="10pt" Height="30" Margin="0, 10" Command="{Binding MoveCommand}"/>
                 <Button Content="_Annuller" FontSize="10pt" Height="30" Margin="0, 10" Click="Annuller"/>
             </StackPanel>
