--- a/Backend/Backend/Views/EditCategoryWindow.xaml
+++ b/Backend/Backend/Views/EditCategoryWindow.xaml
@@ -26,7 +26,7 @@
             </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
                 <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-                <Button Content="_Gem" FontSize="10pt" Height="30" Margin="0, 10" Command="{Binding SaveCategoryCommand}"/>
+                <Button Content="_Gem" FontSize="10pt" IsDefault="True" Height="30" Margin="0, 10" Command="{Binding SaveCategoryCommand}"/>
                 <Button Content="_Annuller" FontSize="10pt" Height="30" Margin="0, 10" Click="Annuller"/>
             </StackPanel>
         </Grid>
