--- a/Backend/Backend/Views/EditProductWindow.xaml
+++ b/Backend/Backend/Views/EditProductWindow.xaml
@@ -34,7 +34,7 @@
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-            <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding SaveProductCommand}"/>
+            <Button Content="_Gem" FontSize="10pt" IsDefault="True" Height="40" Margin="0, 10" Command="{Binding SaveProductCommand}"/>
             <Button Content="_Annuller" FontSize="10pt" Height="40" Margin="0, 10" Click="Annuller"/>
             <Button Content="Ny produktkategori" Margin="0,40"  Command="{Binding AddCategoryCommand}"/>
         </StackPanel>
