--- a/KasseApparat/KasseApparat/ButtonStyle.xaml
+++ b/KasseApparat/KasseApparat/ButtonStyle.xaml
@@ -22,5 +22,9 @@
         <GradientStop Color="LightGray" Offset="0" />
         <GradientStop Color="DarkGray" Offset="1" />
     </RadialGradientBrush>
+    <RadialGradientBrush x:Key="VareButton" GradientOrigin="0.5,0.5">
+        <GradientStop Color="MediumPurple" Offset="0" />
+        <GradientStop Color="Purple" Offset="3" />
+    </RadialGradientBrush>
 
 </ResourceDictionary>
