--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -50,7 +50,8 @@
                             Content="Categories"
                             Click="Categori_Click"
                             ContextMenuService.IsEnabled="False"
-                            Margin="4">
+                            Margin="4"
+                            Background="{StaticResource BlueButton}">
                         <Button.ContextMenu >
                             <ContextMenu>
                             </ContextMenu>
@@ -58,7 +59,8 @@
                     </Button>
                     <Button Grid.Row="0" Grid.Column="1"
                             Margin="4"
-                            Click="RefreshEvent">
+                            Click="RefreshEvent"
+                            Background="{StaticResource BlueButton}">
                         <StackPanel Margin="3">
                             <Image Source="Billeder\Refresh.png"></Image>
                         </StackPanel>
@@ -96,7 +98,8 @@
                             Margin="5"
                             x:Name="ProductButton01"
                             Tag="0"
-                            Command="{Binding CurrentButtonPage[0].AddCommand}">
+                            Command="{Binding CurrentButtonPage[0].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -114,7 +117,7 @@
                             x:Name="ProductButton02"
                             Tag="1"
                             Command="{Binding CurrentButtonPage[1].AddCommand}"
-                            >
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -131,7 +134,8 @@
                             Margin="5"
                             x:Name="ProductButton03"
                             Tag="2"
-                            Command="{Binding CurrentButtonPage[2].AddCommand}">
+                            Command="{Binding CurrentButtonPage[2].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -148,7 +152,8 @@
                             Margin="5"
                             x:Name="ProductButton04"
                             Tag="3"
-                            Command="{Binding CurrentButtonPage[3].AddCommand}">
+                            Command="{Binding CurrentButtonPage[3].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -165,7 +170,8 @@
                             Margin="5"
                             Tag="4"
                             x:Name="ProductButton05"
-                            Command="{Binding CurrentButtonPage[4].AddCommand}">
+                            Command="{Binding CurrentButtonPage[4].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -184,7 +190,8 @@
                             Margin="5"
                             x:Name="ProductButton06"
                             Tag="5"
-                            Command="{Binding CurrentButtonPage[5].AddCommand}">
+                            Command="{Binding CurrentButtonPage[5].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -201,7 +208,8 @@
                             Margin="5"
                             x:Name="ProductButton07"
                             Tag="6"
-                            Command="{Binding CurrentButtonPage[6].AddCommand}">
+                            Command="{Binding CurrentButtonPage[6].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -218,7 +226,8 @@
                             Margin="5"
                             x:Name="ProductButton08"
                             Tag="7"
-                            Command="{Binding CurrentButtonPage[7].AddCommand}">
+                            Command="{Binding CurrentButtonPage[7].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -236,7 +245,8 @@
                             Margin="5"
                             x:Name="ProductButton09"
                             Tag="8"
-                            Command="{Binding CurrentButtonPage[8].AddCommand}">
+                            Command="{Binding CurrentButtonPage[8].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -253,7 +263,8 @@
                             Margin="5"
                             x:Name="ProductButton10"
                             Tag="9"
-                            Command="{Binding CurrentButtonPage[9].AddCommand}">
+                            Command="{Binding CurrentButtonPage[9].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -270,7 +281,8 @@
                             Margin="5"
                             x:Name="ProductButton11"
                             Tag="10"
-                            Command="{Binding CurrentButtonPage[10].AddCommand}">
+                            Command="{Binding CurrentButtonPage[10].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -287,7 +299,8 @@
                             Margin="5"
                             x:Name="ProductButton12"
                             Tag="11"
-                            Command="{Binding CurrentButtonPage[11].AddCommand}">
+                            Command="{Binding CurrentButtonPage[11].AddCommand}"
+                            Background="{StaticResource VareButton}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
@@ -313,10 +326,10 @@
                     <Button Grid.Row="0" Grid.Column="0"
                             Margin="5"
                             Content="Previous Page"
-                            Command="{Binding PrevCommand}" Background="{StaticResource GrayButton}"></Button>
+                            Command="{Binding PrevCommand}" Background="{StaticResource BlueButton}"></Button>
                     <Button Grid.Row="0" Grid.Column="1"
                             Content="Next Page" Margin="5"
-                            Command="{Binding NextCommand}" Background="{StaticResource GrayButton}"></Button>
+                            Command="{Binding NextCommand}" Background="{StaticResource BlueButton}"></Button>
                 </Grid>
             </Grid>
         </GroupBox>
